feat: get user profile endpoint
